Fix for GAL-181, JDK 11 require java.se module